{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 21,
  "lineage": "d4467220-a754-4d18-1393-fc6474c0fa93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad2e3fe9de10886",
            "domain": "vpc",
            "id": "eipalloc-00ad2e3fe9de10886",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-216-179-88.compute-1.amazonaws.com",
            "public_ip": "44.216.179.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:internet-gateway/igw-059488da5f81493b9",
            "id": "igw-059488da5f81493b9",
            "owner_id": "686491797288",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad2e3fe9de10886",
            "association_id": "eipassoc-008b43fa90cd0154f",
            "connectivity_type": "public",
            "id": "nat-0864ab66e64e8a96e",
            "network_interface_id": "eni-0605a90b00cee6ca6",
            "private_ip": "10.100.1.69",
            "public_ip": "44.216.179.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053acdd12d6e25039",
            "tags": {
              "Name": "NAT GW"
            },
            "tags_all": {
              "Name": "NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_sn_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d23670d88a327e1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0864ab66e64e8a96e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d23670d88a327e1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_sn",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0403f9e2f0f97c0051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0864ab66e64e8a96e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0403f9e2f0f97c005",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_sn",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_sn_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059488da5f81493b9",
            "id": "r-rtb-07cc0095d8f3cf9031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cc0095d8f3cf903",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059488da5f81493b9",
            "id": "r-rtb-0babc170d7bf60fb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0babc170d7bf60fb1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:route-table/rtb-0d23670d88a327e1b",
            "id": "rtb-0d23670d88a327e1b",
            "owner_id": "686491797288",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev--Private subnet route table 1"
            },
            "tags_all": {
              "Name": "dev--Private subnet route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_sn",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:route-table/rtb-0403f9e2f0f97c005",
            "id": "rtb-0403f9e2f0f97c005",
            "owner_id": "686491797288",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev--Private subnet route table 2"
            },
            "tags_all": {
              "Name": "dev--Private subnet route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:route-table/rtb-07cc0095d8f3cf903",
            "id": "rtb-07cc0095d8f3cf903",
            "owner_id": "686491797288",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-Public route table 1"
            },
            "tags_all": {
              "Name": "dev-Public route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:route-table/rtb-0babc170d7bf60fb1",
            "id": "rtb-0babc170d7bf60fb1",
            "owner_id": "686491797288",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-Public route table 2"
            },
            "tags_all": {
              "Name": "dev-Public route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_sn_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5a702f3359f1b55",
            "route_table_id": "rtb-0d23670d88a327e1b",
            "subnet_id": "subnet-0f456892a70254bc3"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_sn",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bf61378363b6ba4",
            "route_table_id": "rtb-0403f9e2f0f97c005",
            "subnet_id": "subnet-0c5b4012964d5e19e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sn_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c427773c504c718",
            "route_table_id": "rtb-07cc0095d8f3cf903",
            "subnet_id": "subnet-053acdd12d6e25039"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06584814e0206886d",
            "route_table_id": "rtb-0babc170d7bf60fb1",
            "subnet_id": "subnet-002b9c32c34655f3a"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_sn",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:subnet/subnet-0f456892a70254bc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f456892a70254bc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686491797288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--Private_SN1"
            },
            "tags_all": {
              "Name": "dev--Private_SN1"
            },
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:subnet/subnet-0c5b4012964d5e19e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5b4012964d5e19e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686491797288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--Private_SN2"
            },
            "tags_all": {
              "Name": "dev--Private_SN2"
            },
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:subnet/subnet-053acdd12d6e25039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053acdd12d6e25039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686491797288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--Public_SN1"
            },
            "tags_all": {
              "Name": "dev--Public_SN1"
            },
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:subnet/subnet-002b9c32c34655f3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b9c32c34655f3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686491797288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev--Public_SN2"
            },
            "tags_all": {
              "Name": "dev--Public_SN2"
            },
            "vpc_id": "vpc-0c7223f80e256b03a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686491797288:vpc/vpc-0c7223f80e256b03a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-05c1aa18c57b8a49b",
            "default_route_table_id": "rtb-00e56d9014617ecf6",
            "default_security_group_id": "sg-06d0c63435cf4af85",
            "dhcp_options_id": "dopt-00bb232062c3f28a7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7223f80e256b03a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e56d9014617ecf6",
            "owner_id": "686491797288",
            "tags": {
              "Name": "dev--VPC"
            },
            "tags_all": {
              "Name": "dev--VPC"
            }
          }
        }
      ]
    }
  ]
}